--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -8,8 +8,8 @@ on:
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: ecs-dotnet          # set this to your Amazon ECR repository name
-  ECS_SERVICE: demo                # set this to your Amazon ECS service name
-  ECS_CLUSTER: aws-ecs-demo-task                 # set this to your Amazon ECS cluster name
+  ECS_SERVICE: cf-service                # set this to your Amazon ECS service name
+  ECS_CLUSTER: cf-cluster                # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: td.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: ecs-dotnet           # set this to the name of the container in the
