--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: ecs-dotnet          # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: teja/dotnet          # set this to your Amazon ECR repository name
   ECS_SERVICE: cf-service                # set this to your Amazon ECS service name
   ECS_CLUSTER: cf-cluster                # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: td.json # set this to the path to your Amazon ECS task definition
